fix: add auth
